test_regress/t/t_assert_goto_rep_bad_count.out
%Error: t/t_assert_goto_rep_bad_count.v:16:42: Repetition count is not an elaboration-time constant (IEEE 1800-2023 16.9.2)
                                             : ... note: In instance 't'
   16 |   assert property (@(posedge clk) a[->n] |-> b)
      |                                          ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_assert_goto_rep_bad_count.v:20:42: Unsupported: zero repetition count (IEEE 1800-2023 16.9.2)
                                                         : ... note: In instance 't'
   20 |   assert property (@(posedge clk) a[->0] |-> b)
      |                                          ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_assert_goto_rep_bad_count.v:24:43: Repetition count must be non-negative (IEEE 1800-2023 16.9.2)
                                             : ... note: In instance 't'
   24 |   assert property (@(posedge clk) a[->-1] |-> b)
      |                                           ^~~
%Error: Exiting due to
